# colored-triangle

./: CMakeLists.txt  LICENSE  Makefile  README.md  fragSH.fs  main.cpp  shader.h  shell.nix  vertexSH.vs
include/glad/: glad.h
